b-fixed z-index on modal

--- a/css/app.css
+++ b/css/app.css
@@ -119,6 +119,7 @@ Stles for modal
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0, 0.4);
+    z-index: 98;
 }
 
 .modal_body {
@@ -128,6 +129,7 @@ Stles for modal
     width: 400px;
     background-color: #ffffff;
     transform: translate(-50%, -70%);
+    z-index: 99;
 }
 
 .modal_heading {
